<resources>
    <string name="app_name">БТПИТ</string>
    <string name="app_text">БТПИТ!</string>
    <string name="app_study_text">Мы учимся в БТПИТ!</string>
    <string name="Новости">Новости. Борисоглебский техникум промышленных и информационных технологий</string>
    <string name="_19_13_36">19 марта в 13:36</string>
    <string name="_2025_300">В 2025 году отмечается 300-летие Воронежской губернии. В честь этого важного события мы предлагаем окунуться в историю региона, узнать больше о наших славных земляках и познакомиться с самыми неожиданными фактами о родном крае.</string>
    <string name="todo">TODO</string>
    <string name="_52">52</string>
    <string name="__52">52</string>
    <string name="___52">52</string>
    <string name="_52_">52</string>
</resources>