<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@android:color/white">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="start|top"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back"
            android:contentDescription="Назад" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/avatar"
                        android:layout_width="99dp"
                        android:layout_height="130dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/logo"
                        android:background="@android:color/transparent" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/author_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_marginTop="30dp"
                            android:text="@string/Новости"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/publication_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/_19_13_36"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/more_options"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:src="@drawable/fri" />
                </LinearLayout>

                <TextView
                    android:id="@+id/post_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="В 2025 году отмечается 300-летие Воронежской губернии. В честь этого важного события мы предлагаем окунуться в историю региона, узнать больше о наших славных земляках и познакомиться с самыми неожиданными фактами о родном крае."
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/post_image"
                    android:layout_width="match_parent"
                    android:layout_height="353dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/novost" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/like_button"
                            android:layout_width="36dp"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:src="@drawable/like" />

                        <TextView
                            android:id="@+id/like_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="@string/_52"
                            android:textColor="@android:color/black"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/comment_button"
                            android:layout_width="34dp"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:src="@drawable/comment" />

                        <TextView
                            android:id="@+id/comment_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:text="@string/__52"
                            android:textColor="@android:color/black"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/share_button"
                            android:layout_width="36dp"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:src="@drawable/repost" />

                        <TextView
                            android:id="@+id/share_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="@string/___52"
                            android:textColor="@android:color/black"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/view_count_button"
                            android:layout_width="33dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/eye"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/view_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:text="1300000"
                            android:textColor="@android:color/black"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout> 